# lang-plugin-python311

./: .gitignore  CMakeLists.txt  README.md  SConscript_python3  SConscript_python311  build_plugin_installer_helper.py  uninstall_plugin.py
api/: CMakeLists.txt  SConscript_api-python3  __init__.py  metaffi_handle.py  metaffi_module.py  metaffi_runtime.py  metaffi_types.py  publish.ps1  publish_python_package.py  pycdts_converter.py  pyproject.toml  xllr_wrapper.py
api/metaffi/: __init__.py  classes_metaffi.puml  metaffi_handle.py  metaffi_module.py  metaffi_runtime.py  metaffi_types.py  pycdts_converter.py  xllr_wrapper.py
api/tests/: run_api_tests.py
api/tests/extended/go/gomcache/: build_metaffi.py  gomcache_test.py  run_test.py
api/tests/extended/jvm/log4j/: build_metaffi.py  log4j_test.py  log4j_test_with_compiler.py  test_idl_plugin.py  test_plugin_load.py
api/tests/extended/openjdk/log4j/: log4j_test.py
api/tests/go/: openjdk_test.py
api/tests/openjdk/: TestRuntime.java  openjdk_test.py
api/tests/sanity/go/: build_metaffi.py  go.mod  go_test.py  go_test_with_generated_python_code.py
api/tests/sanity/jvm/: README.md  build_metaffi.py  jvm_test.py  jvm_test_with_compiler.py  run_e2e_test.py
api/tests/sanity/openjdk/: README.md  TestRuntime.java  build_java_code.py  build_metaffi.py  openjdk_test.py  openjdk_test_with_compiler.py  run_e2e_test.py
api/unittest/: api_test.py  test_python311_api.py
compiler/: CMakeLists.txt  Compiler.go  CompilerGuest_test.go  CompilerGuest_testHelper.go  CompilerHost_test.go  CompilerHost_test.gotest  GuestCompiler.go  GuestCompiler_test.go  GuestTemplate.go  HostCompiler.go  HostCompiler_test.go  HostTemplate.go  MetaFFIHostTemplate.go  PluginMain.go  TemplateFunctions.go  TypeConversion.go  compiler_api.cpp  go.mod  metaffi_objects.json  metaffi_objects_MetaFFIGuest.py  python_compiler_plugin.cpp  python_compiler_plugin.h
compiler/temp/: GuestCode.py  test_OpenFFIGuest.py
compiler/test/: CMakeLists.txt  conftest.py  test.md  test_host_compiler_e2e.py
idl/: CMakeLists.txt  ClassesExtractor.go  FunctionsExtractor.go  GlobalsExtractor.go  PyIDLCompiler.go  PyIDLCompiler_test.go  go.mod  idl_plugin_test.cpp  none_python_impl_definitions.py  py_extractor.go  py_extractor.json  py_extractor.py  py_extractor_MetaFFIGuest.py  py_idl_generator.py  python311_idl_thoughts.md  python_idl_plugin.cpp  test_fixed_extractor.py  test_py_extractor.py  test_py_extractor_comprehensive.py  test_py_idl_generator.py
idl/metaffi.idl.python311.dir/Debug/: objects.txt
idl/metaffi.idl.python311.dir/MinSizeRel/: objects.txt
idl/metaffi.idl.python311.dir/RelWithDebInfo/: objects.txt
idl/metaffi.idl.python311.dir/Release/: objects.txt
idl/py_extractor/: MetaFFIGoHostCommon.go  _MetaFFIHost.go  py_extractor_MetaFFIHost.go
runtime/: CMakeLists.txt  README.md  SConscript_conandeps  SConscript_cpythondeps  SConscript_xllr-python3  SConscript_xllr-python311  call_xcall.cpp  call_xcall.h  cdt_python3.cpp  cdt_python3.h  cdts_python3.cpp  cdts_python3.h  cdts_python3_test.cpp  conanfile.txt  host_cdts_converter.cpp  host_cdts_converter.h  metaffi_package_importer.cpp  objects_table.cpp  objects_table.h  py_bool.cpp  py_bool.h  py_bytes.cpp  py_bytes.h  py_float.cpp  py_float.h  py_int.cpp  py_int.h  py_list.cpp  py_list.h  py_metaffi_callable.cpp  py_metaffi_callable.h  py_metaffi_handle.cpp  py_metaffi_handle.h  py_object.cpp  py_object.h  py_openffi_handle.cpp  py_openffi_handle.h  py_str.cpp  py_str.h  py_tuple.cpp  (+15 more)
runtime/test/: runtime_test_target.py
test/: CMakeLists.txt  python3_test_env.cpp  python3_test_env.h  python3_wrappers.cpp  python3_wrappers.h  test.md  test_args.cpp  test_arrays.cpp  test_async.cpp  test_classes.cpp  test_core.cpp  test_module_state.cpp  test_single_file.cpp  test_third_party.cpp
tests/extended/go/gomcache/: build_metaffi.py  gomcache_test.py
tests/extended/openjdk/log4j/: log4j_test.py
tests/sanity/go/: TestRuntime.go  build_metaffi.py  go_test.py
tests/sanity/openjdk/: openjdk_test.py
